Fixing logo spacing

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -202,8 +202,9 @@ body.with-header {
 	font-family: 'PlayFair Display', serif;
 	font-weight: 700;
 	font-style: normal;
-	font-size: 30px;
+	font-size: 32px;
 	margin-top: 40px;
+	margin-bottom: 30px;
 }
 
 .socials-container {
